# DjangoAuth

./: pyproject.toml
.github/workflows/: type-check.yaml
project/: asgi.py  settings.py  urls.py  wsgi.py
src/django_auth/: apps.py  exceptions.py  urls.py
src/django_auth/django_app/: apps.py  urls.py
src/django_auth/migrations/: 0001_initial.py
src/django_auth/models/: __init__.py  _one_time_password.py  _user.py
src/django_auth/outputs/: __init__.py  _get_user.py  _login_user.py  _logout_user.py  _register_user.py  _verify_user.py
src/django_auth/repositories/: __init__.py  _one_time_password.py  _user.py
src/django_auth/serializers/: __init__.py  _login_user.py  _logout_user.py  _register_user.py  _verify_user.py
src/django_auth/views/: __init__.py  _get_user.py  _login_user.py  _logout_user.py  _register_user.py  _verify_user.py
tasks/: __init__.py  constants.py  django.py  testing.py
tasks/backend/: type_checking.py
tests/: conftest.py
tests/fixtures/: _constants.py  _tokens.py  authenticator.py  constants.py
tests/fixtures/_dto/: __init__.py
tests/fixtures/_dtos/: __init__.py  register_user.py
tests/fixtures/_models/: __init__.py  otp.py  user.py
tests/fixtures/_outputs/: __init__.py  register_user.py
tests/fixtures/_payloads/: __init__.py  login_user.py  logout_user.py  register_user.py  verify_user.py
tests/fixtures/_repositories/: __init__.py  otp.py  user.py
tests/fixtures/_requests/: __init__.py  login_user.py  logout_user.py  register_user.py  verify_user.py
tests/fixtures/_responses/: __init__.py  get_user.py  (+5 more)
(+119 files in other folders)
